update cursor page